tests/fixtures/qml/reject/unknown_type.qml
import QtQuick 2.15

Item {
    width: 100
    height: 100

    ListModel {
        id: model
    }
}
